# lithoSpore

./: .gitignore  Cargo.toml  Containerfile  GETTING_STARTED.md  README.md  SCIENCE.md  deny.toml
.github/workflows/: ci.yml  notify-sporeprint.yml
artifact/: data.toml  liveSpore.json  ltee  scope.toml  tolerances.toml
artifact/data/barrick_2009/: README_fetch.md  mutation_parameters.json
artifact/data/wiser_2013/: fitness_data.csv
artifact/usb-root/: .biomeos-spore  Containerfile  PROTOTYPE.md  README.md  refresh  spore.sh  validate  verify
artifact/usb-root/biomeOS/: tower.toml
artifact/usb-root/biomeOS/graphs/: lithoSpore_validation.toml
baselines/: registry.toml  viz_patterns.toml
baselines/breseq/: reference_data.json  viz_spec.toml
baselines/cryptkeeper/: reference_data.json  viz_spec.toml
baselines/efm/: reference_data.json  viz_spec.toml
baselines/marker_divergence/: reference_data.json  viz_spec.toml
baselines/ostir/: reference_data.json  viz_spec.toml
baselines/plannotate/: reference_data.json  viz_spec.toml
baselines/rna_mi/: reference_data.json  viz_spec.toml
config/: capability_registry.toml
crates/litho-core/: Cargo.toml
crates/litho-core/src/: braid.rs  consts.rs  discovery.rs  env_vars.rs  error.rs  graph_checks.rs  harness.rs  lib.rs  manifest.rs  platform.rs  provenance.rs  pseudospore.rs  scope.rs  spore.rs  stats.rs  tolerance.rs  validation.rs  viz.rs
crates/litho-core/src/viz/: baselines.rs  mod.rs  modules.rs
crates/litho-core/tests/fixtures/: capability_registry.toml
crates/ltee-alleles/: Cargo.toml
crates/ltee-alleles/src/: lib.rs  main.rs
crates/ltee-anderson/: Cargo.toml
crates/ltee-anderson/src/: lib.rs  main.rs
crates/ltee-biobricks/: Cargo.toml
crates/ltee-biobricks/src/: lib.rs  main.rs
crates/ltee-breseq/: Cargo.toml
crates/ltee-breseq/src/: lib.rs  main.rs
crates/ltee-citrate/: Cargo.toml
crates/ltee-citrate/src/: lib.rs  main.rs
crates/ltee-cli/: Cargo.toml
crates/ltee-cli/src/: assemble.rs  audit.rs  chaos.rs  commands.rs  deploy_test.rs  dispatch.rs  domain_profile.rs  emit_pseudospore.rs  fetch.rs  fetch_pseudospore.rs  grow.rs  ingest_pseudospore.rs  init_validation.rs  main.rs  ops.rs  pack_pseudospore.rs  parity.rs  populate_validation.rs  promote.rs  promote_spore.rs  registry.rs  spore_status.rs  translate_config.rs  unpack_pseudospore.rs  validate.rs  verify.rs  visualize.rs
crates/ltee-cli/src/audit/: completeness.rs  derivation.rs  domain.rs  integrity.rs  mod.rs  provenance.rs
crates/ltee-cli/src/emit_pseudospore/: environment.rs  figures.rs  index_map.rs  manifest.rs  mod.rs  scope.rs  scripts.rs
crates/ltee-cli/src/grow/: deploy.rs  mod.rs  stages.rs  util.rs
crates/ltee-cli/src/promote/: mod.rs  report.rs
crates/ltee-cli/src/viz/: baselines.rs  mod.rs  modules.rs
crates/ltee-cli/src/viz/baselines/: breseq_adapter.rs  cryptkeeper_adapter.rs  efm_adapter.rs  marker_divergence_adapter.rs  mod.rs  ostir_adapter.rs  plannotate_adapter.rs  rna_mi_adapter.rs
crates/ltee-cli/tests/: cli_integration.rs  integration.rs  usb_roundtrip.rs
crates/ltee-fitness/: Cargo.toml
crates/ltee-fitness/src/: lib.rs  main.rs
crates/ltee-mutations/: Cargo.toml
crates/ltee-mutations/src/: lib.rs  main.rs
crates/pseudospore-core/: Cargo.toml
crates/pseudospore-core/src/: blake3_manifest.rs  braid_envelope.rs  domain_profile.rs  envelope.rs  error.rs  lib.rs  livespore.rs  receipts.rs  scope.rs  tarball.rs  validation.rs
crates/pseudospore-core/src/domain_profile/: mod.rs  parse.rs
data/sources/: ltee_barrick.toml
data/targets/: ltee_validation_targets.toml
docs/: ARCHITECTURE.md  DEGRADATION_BEHAVIOR.md  UPSTREAM_GAPS.md
experiments/: README.md
graphs/: ltee_guidestone.toml
lineage/: THREAD_INDEX.toml
notebooks/: litho_figures.py
notebooks/module1_fitness/: power_law_fitness.py
notebooks/module2_mutations/: mutation_accumulation.py
notebooks/module3_alleles/: allele_trajectories.py
notebooks/module4_citrate/: citrate_innovation.py
notebooks/module5_biobricks/: biobrick_burden.py
notebooks/module6_breseq/: breseq_comparison.py
notebooks/module7_anderson/: anderson_predictions.py
papers/: READING_ORDER.md  registry.toml
profiles/: initiochem-general.toml  md-metadynamics-carbohydrate.toml
provenance/: README.md
provenance/braids/: airspring-agricultural-meteorology_ferment.json  compchem_guidestone_v1_6_1.json  groundspring-ltee-measurement_ferment.json  healthspring-clinical-pkpd_ferment.json  ludospring-game-science_ferment.json  neuralspring-ml-surrogates_ferment.json  wetspring-life-science-analytics_ferment.json
pseudospores/: EXAMPLES.md  registry.toml
scripts/: assemble-usb.sh  build-artifact.sh  build-container.sh  chaos-test.sh  deploy-test-local.sh  fetch_barrick_2009.sh  fetch_biobricks_2024.sh  fetch_blount_2012.sh  fetch_dfe_2024.sh  fetch_good_2017.sh  fetch_tenaillon_2016.sh  fetch_wiser_2013.sh  python-wrapper.sh  vm-cloud-init.yaml
specs/: CHASSIS.md  MODULES.md  PARITY_REPORT_SCHEMA.md  PSEUDOSPORE_STANDARD.md  VALIDATION_DATA_STREAM.md
validation/: validate.sh
validation/expected/: module1_fitness.json  module2_mutations.json  module3_alleles.json  module4_citrate.json  module5_biobricks.json  module7_anderson.json  neuralspring_b1_ml_surrogate.json
validation/handbacks/: INTERACTIVE_SCENEGRAPH_HANDBACK.md
whitePaper/baseCamp/: README.md
workloads/: litho-validate-tier2.toml  litho-validate-tier3.toml
