# SPDX-License-Identifier: AGPL-3.0-or-later
#
# lithoSpore — First Targeted GuideStone: LTEE Validation Artifact
#
# Seven science modules reproducing Barrick/Lenski LTEE papers + new
# Anderson-QS predictions. Builds USB-deployable ecoBin binaries.

[workspace]
resolver = "2"
members = [
    "crates/pseudospore-core",
    "crates/litho-core",
    "crates/ltee-fitness",
    "crates/ltee-mutations",
    "crates/ltee-alleles",
    "crates/ltee-citrate",
    "crates/ltee-biobricks",
    "crates/ltee-breseq",
    "crates/ltee-anderson",
    "crates/ltee-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/sporeGarden/lithoSpore"

[workspace.dependencies]
pseudospore-core = { path = "crates/pseudospore-core" }
litho-core = { path = "crates/litho-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
blake3 = { version = "1", default-features = false, features = ["pure", "std"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "now"] }
# ureq 3 defaults to rustls (not native-tls); explicit features prevent TLS backend drift.
ureq = { version = "3", default-features = false, features = ["rustls", "gzip"] }
walkdir = "2"
tar = "0.4.45"
flate2 = { version = "1.1", default-features = false, features = ["rust_backend"] }
# Pure-Rust deflate only — no zstd/lzma/bzip2 C backends from default features.
zip = { version = "8.6", default-features = false, features = ["deflate-flate2-zlib-rs"] }
thiserror = "2"
[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
similar_names = "allow"
too_many_lines = "allow"
manual_let_else = "allow"
float_cmp = "allow"
