[package]
name = "litho-core"
description = "Shared types, tolerances, provenance, and validation harness for lithoSpore modules"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
[lints]
workspace = true
