[package]
name = "ltee-alleles"
description = "Module 3: Allele frequency trajectories (Good 2017 / B3)"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "ltee_alleles"
path = "src/lib.rs"

[[bin]]
name = "ltee-alleles"
path = "src/main.rs"

[dependencies]
litho-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }

[lints]
workspace = true
