[package]
name = "ltee-anderson"
description = "Module 7: Anderson-QS predictions — new predictions via disorder framework"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ltee-anderson"
path = "src/main.rs"

[dependencies]
litho-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
