[package]
name = "ltee-breseq"
description = "Module 6: 264 genome breseq comparison (Tenaillon 2016 / B7)"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "ltee_breseq"
path = "src/lib.rs"

[[bin]]
name = "ltee-breseq"
path = "src/main.rs"

[dependencies]
litho-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }

[lints]
workspace = true
