[package]
name = "ltee-citrate"
description = "Module 4: Citrate innovation cascade (Blount 2008/2012 / B4)"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ltee-citrate"
path = "src/main.rs"

[dependencies]
litho-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }

[lints]
workspace = true
