[package]
name = "ltee-cli"
description = "Unified CLI entry point for lithoSpore — validate, refresh, status, spore"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "litho"
path = "src/main.rs"

[dependencies]
litho-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
ureq = { workspace = true }
walkdir = { workspace = true }
ltee-fitness = { path = "../ltee-fitness" }
ltee-mutations = { path = "../ltee-mutations" }
ltee-alleles = { path = "../ltee-alleles" }
ltee-citrate = { path = "../ltee-citrate" }
ltee-biobricks = { path = "../ltee-biobricks" }
ltee-breseq = { path = "../ltee-breseq" }
ltee-anderson = { path = "../ltee-anderson" }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
