[package]
name = "ltee-cli"
description = "Unified CLI entry point for lithoSpore — validate, refresh, status, spore"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "litho"
path = "src/main.rs"

[features]
default = ["fetch"]
fetch = ["dep:ureq"]

[dependencies]
pseudospore-core = { workspace = true }
litho-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
ureq = { workspace = true, optional = true }
walkdir = { workspace = true }
ltee-fitness = { path = "../ltee-fitness" }
ltee-mutations = { path = "../ltee-mutations" }
ltee-alleles = { path = "../ltee-alleles" }
ltee-citrate = { path = "../ltee-citrate" }
ltee-biobricks = { path = "../ltee-biobricks" }
ltee-breseq = { path = "../ltee-breseq" }
ltee-anderson = { path = "../ltee-anderson" }
tar = { workspace = true }
flate2 = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
