[package]
name = "ltee-mutations"
description = "Module 2: Mutation accumulation curves (Barrick 2009 / B1)"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ltee-mutations"
path = "src/main.rs"

[dependencies]
litho-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }

[lints]
workspace = true
