# SPDX-License-Identifier: AGPL-3.0-or-later
#
# pseudospore-core — domain-agnostic spore envelope primitives.
#
# Shared by litho CLI and biomeOS for pseudoSpore/lithoSpore lifecycle.
# Per SPORE_OWNERSHIP_MATRIX.md: envelope logic lives here, domain science
# stays in springs, NUCLEUS gateway stays in biomeOS.

[package]
name = "pseudospore-core"
description = "Domain-agnostic spore envelope primitives — BLAKE3, scope, liveSpore, receipts, tarball"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
